# ft2232-sniffer

./: Cargo.toml
src/: config.rs  config.toml  device.rs  main.rs
